--- a/src/pages/AuthPage.css
+++ b/src/pages/AuthPage.css
@@ -109,7 +109,7 @@
 
 .auth-submit {
   width: 100%;
-  padding: 14px 24px;
+  padding: 10px 24px;
   font-size: 1rem;
   font-weight: 500;
   font-family: inherit;
